--- a/report.Rmd
+++ b/report.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "Treball pràctic d'estadística"
-author: "u0000000"
-date: '_Data creació de l''informe: `r format(Sys.Date(), "%d/%m")`_'
 output:
   html_document: 
     highlight: textmate
@@ -13,7 +11,7 @@ library(lubridate)
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Primerament descarregarem les dades de les dues web anteriors:
+Primerament descarrega les dades de les dues webs anteriors:
 
 ```{r, eval=FALSE}
 oxcgrt_commit = "dd81c18f5576d78aa0e5543f0d91ccd5c9849ba0"
@@ -28,19 +26,21 @@ download.file(sprintf(oxcgrt_url, oxcgrt_commit, oxcgrt_file), oxcgrt_file)
 download.file(sprintf(owid_url, owid_commit, owid_file), owid_file)
 ```
 
-Un cop descarregades les dades les obrirem amb el paquet `readr`:
+Un cop descarregades, obre-les amb el paquet `readr`:
 
 ```{r, message=FALSE}
 dowid = read_csv("owid-covid-data.csv", guess_max = 50000)
 doxcgrt = read_csv("OxCGRT_latest.csv", guess_max = 50000)
 ```
 
-En aquest punt, seleccionarem una data per treballar. Per tal de que cada alumne (o grup) treballi amb dates diferents, la farem dependre d'un codi d'estudiant (si sou un grup de dos, podeu posar el que preferiu):
+Arribats a aquest punt, seleccionaràs una data per treballar. Per tal que cada alumne (o grup) treballi amb dates diferents, la faràs dependre del teu codi d'estudiant (si sou un grup de dos, podeu posar qualsevol dels dos codis):
 
 ```{r, results='asis'}
 set.seed(CODI_UDG <- 0000000); DAY = sample(seq(ymd("20200401"), ymd("20201101"), 1), 1)
 cat(sprintf("S'està treballant a data %s.", format(DAY, "%d/%m")))
 ```
+
+## Processament del conjunt de dades a analitzar
 
 1. **Comenta en detall cada un dels següents *chunks* utilitzats pel processament de dades:**
 
@@ -99,11 +99,11 @@ data = inner_join(Y, X, by = 'iso_code')
 
 *(Espai per comentar)*
 
-## Processament del conjunt de dades a analitzar
+Estem interessats a analitzar quina relació hi ha entre les decisions de govern (polítiques de tancament i contenció, i econòmiques), i com aquestes es relacionen amb la variació de casos a la població (`y`).
 
-Estem interessat en analitzar quina relació hi ha entre les decisions de govern (polítiques de tancament i contenció, i econòmiques), i com aquestes es relacionen amb la variació de casos a la població (`y`).
+2. **Prepara el conjunt de dades `data` per a ser analitzat segons les característiques de les variables. Explica les decisions que prens i quina és la tipologia de les variables que té el teu conjunt de dades.**
 
-2. **Prepara el conjunt de dades `data` per a ser analitzat segons les característiques de les variables. Explica les decisions que prens i quina és la tipologia de les variables que tens.**
+## Anàlisi del conjunt de dades
 
 *(Espai per desenvolupar)*
 
@@ -115,7 +115,11 @@ Estem interessat en analitzar quina relació hi ha entre les decisions de govern
 
 *(Espai per desenvolupar)*
 
-5. **Crea un model que expliqui el creixement observat a partir de les variables que creguis adients.**
+## Model predictiu lineal
+
+En les següents dos preguntes, intenta afegir els conceptes que has aprés a la pràctica 5.
+
+5. **Crea un model que expliqui el creixement observat a partir de les variables que creguis adients. Descriu l'efecte que tenen les variables explicatives amb la variable resposta.**
 
 *(Espai per desenvolupar)*
 
