--- a/report.Rmd
+++ b/report.Rmd
@@ -3,6 +3,7 @@ title: "Treball pràctic d'estadística"
 output:
   html_document: 
     highlight: textmate
+    toc: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -40,7 +41,7 @@ set.seed(CODI_UDG <- 0000000); DAY = sample(seq(ymd("20200401"), ymd("20201101")
 cat(sprintf("S'està treballant a data %s.", format(DAY, "%d/%m")))
 ```
 
-## Processament del conjunt de dades a analitzar
+## Processament del conjunt de dades a analitzar (pregunta 1)
 
 1. **Comenta en detall cada un dels següents *chunks* utilitzats pel processament de dades:**
 
@@ -101,9 +102,11 @@ data = inner_join(Y, X, by = 'iso_code')
 
 Estem interessats a analitzar quina relació hi ha entre les decisions de govern (polítiques de tancament i contenció, i econòmiques), i com aquestes es relacionen amb la variació de casos a la població (`y`).
 
+Tenint això en compte, contesta les preguntes següents finals final del treball.
+
 2. **Prepara el conjunt de dades `data` per a ser analitzat segons les característiques de les variables. Explica les decisions que prens i quina és la tipologia de les variables que té el teu conjunt de dades.**
 
-## Anàlisi del conjunt de dades
+## Anàlisi del conjunt de dades (preguntes 2 i 3)
 
 *(Espai per desenvolupar)*
 
@@ -111,19 +114,19 @@ Estem interessats a analitzar quina relació hi ha entre les decisions de govern
 
 *(Espai per desenvolupar)*
 
-4. **Utilitza els contrastos vistos a classes per treure conclusions o assumpcions que es poden fer amb les tres relacions de l'apartat anterior (numèrica-numèrica, numèrica-categòrica i categòrica-categòrica).**
+4. **Utilitza els contrastos vistos a classes per treure conclusions o assumpcions que es poden fer amb les tres relacions de l'apartat anterior (numèrica-numèrica, numèrica-categòrica i categòrica-categòrica). Per cada un dels contrastos, específica les hipòtesis inicial i alternativa, quin és l'estadístic de contrast, el valor p i la decisió final envers les hipòtesis plantejades.**
 
 *(Espai per desenvolupar)*
 
-## Model predictiu lineal
+## Model predictiu lineal (preguntes 4 i 5)
 
-En les següents dos preguntes, intenta afegir els conceptes que has aprés a la pràctica 5.
+En les següents dues preguntes, intenta afegir els conceptes que has après a la pràctica 5.
 
-5. **Crea un model que expliqui el creixement observat a partir de les variables que creguis adients. Descriu l'efecte que tenen les variables explicatives amb la variable resposta.**
+5. **Crea un model de regressió lineal que expliqui la variable `y` a partir de les variables d'acció de govern o altres variables derivades d'aquestes. Tria el model de manera que sigui òptim segons algun criteri vist a classe. Per aquest model, descriu l'efecte que tenen les variables explicatives amb la variable resposta i mira si es compleixen les assumpcions bàsiques.**
 
 *(Espai per desenvolupar)*
 
-6. **Utilitza aquest model per fer una predicció de la variació esperada a data d'avui:**
+6. **Utilitza aquest model per fer una predicció mitjana amb interval de confiança de la variable `y` al dia 15 de novembre, disposant únicament de les variables del conjunt `doxgrt`.**
 
 ```{r}
 data_pred = filter(doxcgrt, is.na(RegionName), ymd(Date) == ymd("20201115")) %>%
