--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -429,6 +429,8 @@ Seguint el criteri AIC, arribem al model que conté la variable C8 i les variabl
 summary(m1)
 ```
 
+Com veiem, en aquest model l'únic terme significatiu és l'associata a la mesura C8=2 envers la mesura C8=1, on podem veure que hi ha diferències significatives entre aplicar quarantena a les arrivades (C8=2) i fer controls a l'entrada (C8=1). En el cas d'aplicar quarantena, sembla que el nombre d'esdeveniments augment. Segurament sigui per les condicions que porten a aplicar aquestes mesures.
+
 Anem a veure si es compleixen els supòsits bàsics dels models lineals:
 
 * __Homoscedasticitat dels residus__
